--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.2.0",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.11"
   },
